[package]
name = "one-file-raft"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Raft consensus in 300 LOC"
documentation = "https://docs.rs/one-file-raft"
homepage = "https://github.com/drmingdrmer/one-file-raft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/one-file-raft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
env_logger = "0.10.2"

